# yolo-edgeai-waste-sorter

./: .gitignore  LICENSE  README.md  dataset_metadata.csv  requirements.txt
AI/: requirements.all.txt  requirements.txt  test.py
AI/configs/: preprocess.yaml
AI/docs/: dataset.md  deployment.md  experiment_log.md  model_improvement.md  system_architecture.md  week01_progress.md
AI/docs/images/error_analysis/: error_summary.csv
AI/notebooks/: exp01_hnm_training.ipynb  exp02_augmentation.ipynb
AI/src/: test.py
AI/src/analysis/: count_overlap.py  error_analysis.py  generate_hnm_dataset.py
AI/src/inference/: calibrate_homography.py  detect_realtime.py  homography_matrix.npy
AI/src/preprocessing/: build_dataset.py  fix_jpeg.py  preprocess.py  preprocess_fast.py  sample_dataset.py
AI/src/training/: compare_models.py  export_onnx.py  train.py
SIM/USD_output/so_arm101/: so_arm101.usda
docs/: project_proposal.md
isaac-sim/: test.py
notebooks/: compare_results.ipynb  run_colab.ipynb
ros2_ws/: .gitignore  README.md  make_homography.py
ros2_ws/src/camera_node_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/detector_node_pkg/: package.xml  setup.cfg  setup.py
ros2_ws/src/object_detector_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_control_node/: package.xml  setup.cfg  setup.py
ros2_ws/src/so101-ros-physical-ai/: .gitignore  .gitmodules  LICENSE  README.md  pixi.toml
ros2_ws/src/so101-ros-physical-ai/episode_recorder/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/so101-ros-physical-ai/episode_recorder/config/: default_config.yaml
ros2_ws/src/so101-ros-physical-ai/episode_recorder/include/episode_recorder/: episode_recorder.hpp
ros2_ws/src/so101-ros-physical-ai/episode_recorder/launch/: recorder.launch.py
ros2_ws/src/so101-ros-physical-ai/episode_recorder/src/: episode_recorder.cpp  episode_recorder_node.cpp  teleop_episode_keyboard.cpp
ros2_ws/src/so101-ros-physical-ai/policy_server/: README.md  __main__.py  grpc_server.py  inference_engine.py  pyproject.toml  server.py  zmq_server.py
ros2_ws/src/so101-ros-physical-ai/so101_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/so101-ros-physical-ai/so101_bringup/config/cameras/: so101_cameras.yaml  so101_gs_cam.yaml  so101_libcam_cam.yaml  so101_usb_cam.yaml  so101_v4l2_cam.yaml
ros2_ws/src/so101-ros-physical-ai/so101_bringup/config/cameras/calibrations/: cam_overhead.yaml
ros2_ws/src/so101-ros-physical-ai/so101_bringup/config/hardware/: follower_joints.yaml  leader_joints.yaml  lerobot_follower_arm.json  lerobot_leader_arm.json
ros2_ws/src/so101-ros-physical-ai/so101_bringup/config/recording/: episode_recorder_so101.yaml
ros2_ws/src/so101-ros-physical-ai/so101_bringup/config/ros2_control/: follower_controllers.yaml  follower_split_controllers.yaml  leader_controllers.yaml
ros2_ws/src/so101-ros-physical-ai/so101_bringup/launch/: camera_tf.launch.py  cameras.launch.py  follower.launch.py  follower_moveit_demo.launch.py  follower_recording.launch.py  follower_split.launch.py  follower_vision.launch.py  inference.launch.py  layout_tf.launch.py  leader.launch.py  moveit_py_test.launch.py  recording_session.launch.py  teleop.launch.py  teleop_split.launch.py
ros2_ws/src/so101-ros-physical-ai/so101_bringup/rviz/: follower.rviz  leader.rviz  teleop.rviz
ros2_ws/src/so101-ros-physical-ai/so101_description/: CMakeLists.txt  package.xml
ros2_ws/src/so101-ros-physical-ai/so101_description/launch/: display.launch.py  display_live.launch.py  display_live_duo.launch.py
ros2_ws/src/so101-ros-physical-ai/so101_description/meshes/: handle_so101_v1.stl  wrist_roll_so101_v1.stl
ros2_ws/src/so101-ros-physical-ai/so101_description/onshape/: config.json  so101-follower.urdf  so101-leader.urdf
ros2_ws/src/so101-ros-physical-ai/so101_description/onshape/assets/: base_motor_holder_so101_v1.part  base_motor_holder_so101_v1.stl  base_so101_v2.part  base_so101_v2.stl  handle_so101_v1.part  motor_holder_so101_base_v1.part  motor_holder_so101_base_v1.stl  motor_holder_so101_wrist_v1.part  motor_holder_so101_wrist_v1.stl  moving_jaw_so101_v1.part  moving_jaw_so101_v1.stl  rotation_pitch_so101_v1.part  rotation_pitch_so101_v1.stl  sts3215_03a_no_horn_v1.part  sts3215_03a_no_horn_v1.stl  sts3215_03a_v1.part  sts3215_03a_v1.stl  trigger_so101_v1.part  trigger_so101_v1.stl  under_arm_so101_v1.part  under_arm_so101_v1.stl  upper_arm_so101_v1.part  upper_arm_so101_v1.stl  waveshare_mounting_plate_so101_v2.part  waveshare_mounting_plate_so101_v2.stl  wrist_roll_follower_so101_v1.part  wrist_roll_follower_so101_v1.stl  wrist_roll_pitch_so101_v2.part  wrist_roll_pitch_so101_v2.stl  wrist_roll_so101_v1.part
ros2_ws/src/so101-ros-physical-ai/so101_description/rviz/: display.rviz  display_duo.rviz
ros2_ws/src/so101-ros-physical-ai/so101_description/scripts/: live_urdf_reload.py
ros2_ws/src/so101-ros-physical-ai/so101_description/urdf/: so101_arm.urdf.xacro  so101_arm_common.xacro  so101_cameras.xacro  so101_macros.xacro  so101_materials.xacro
ros2_ws/src/so101-ros-physical-ai/so101_description/urdf/end_effectors/: so101_ee_common.xacro  so101_ee_follower.xacro  so101_ee_leader.xacro
ros2_ws/src/so101-ros-physical-ai/so101_description/urdf/legacy/: so101_follower.urdf  so101_leader.urdf
ros2_ws/src/so101-ros-physical-ai/so101_description/urdf/ros2_control/: so101_ros2_control.xacro
ros2_ws/src/so101-ros-physical-ai/so101_kinematics_msgs/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/so101-ros-physical-ai/so101_kinematics_msgs/srv/: GoToJoints.srv  GoToPose.srv
ros2_ws/src/so101-ros-physical-ai/so101_teleop/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/so101-ros-physical-ai/so101_teleop/config/: teleop.yaml  teleop_split.yaml
ros2_ws/src/so101-ros-physical-ai/so101_teleop/launch/: teleop.launch.py  teleop_split.launch.py
ros2_ws/src/so101-ros-physical-ai/so101_teleop/src/: teleop.cpp  teleop_split.cpp
ros2_ws/src/sorting_bringup/: package.xml  setup.py
ros2_ws/src/waste_detector/: package.xml  setup.cfg  setup.py
(+93 files in other folders)
