<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>episode_recorder</name>
  <version>0.1.0</version>
  <description>Minimalistic ROS2 episode recorder for imitation learning. 
    Records rosbags (MCAP) from configurable topics with keyboard-driven episode control.</description>
  <maintainer email="dmitri@manajev.com">Dmitri Manajev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 core -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>lifecycle_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Bag recording -->
  <depend>yaml-cpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <exec_depend>rosbag2_storage_mcap</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
