<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so101_bringup</name>
  <version>0.1.0</version>
  <description>  
    Launch and configuration package for 
    the SO-101 ROS 2 stack (leader/follower bringup, ros2_control, teleop, cameras, 
    RViz/MoveIt demos, and recording sessions).
  </description>
  <maintainer email="dmitri@manajev.com">Dmitri Manajev</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>so101_description</depend>

  <!-- cameras.launch.py spawns nodes from these packages -->
  <exec_depend>usb_cam</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>gscam</exec_depend>
  <exec_depend>camera_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
